# myStrTools

./: CITATION.cff  README.md  pyproject.toml
src/mystrtools/: __init__.py  _word_split.py  camel_case.py  camel_to_space.py  kebab_case.py  pascal_case.py  snake_case.py  transitions.py
tests/: test_case_conversion.py
