[project]
name = "mystrtools"
version = "0.1.0"
description = ""
authors = [
    {name = "Romolo Politi",email = "romolo.politi@inaf.it"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mystrtools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]

addopts = [
    "--basetemp=/tmp/pytest",
    "--verbosity=3", 
    "--tb=line", 
    "--capture=sys", 
    "--show-capture=all",
    "--cov=mystrtools",
    "--cov-report=term",
    "--cov-report=html:coverage/coverage_html",
    "--cov-report=xml:coverage/coverage.xml", 
    "--cov-report=json:coverage/coverage.json"

   
]
testpaths=[
    "tests/"
]
log_file = "output/log/pytest_log.log"
log_file_level = "DEBUG"

log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

log_file_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = ["."]

[tool.coverage.run]
branch=true
omit=["tests/*"]



[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
devel = [
    "ruff (>=0.15.4,<0.16.0)"
]
